--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
 server:
   port: ${SERVER_PORT:8080}
 
+client:
+  exchange-generator:
+    base-url: http://localhost:8085/api/rates
+    connect-timeout-ms: 1000
+    response-timeout-ms: 1000
+
 management:
   endpoints:
     web:
