--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -6,6 +6,10 @@ server:
   port: ${SERVER_PORT:8080}
 
 client:
+  accounts:
+    base-url: http://localhost:8081/accounts
+    connect-timeout-ms: 1000
+    response-timeout-ms: 1000
   exchange-generator:
     base-url: http://localhost:8085/api/rates
     connect-timeout-ms: 1000
