--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
 server:
   port: ${SERVER_PORT:8081}
 
+client:
+  accounts:
+    base-url: http://localhost:8081/accounts
+    connect-timeout-ms: 1000
+    response-timeout-ms: 1000
+
 management:
   endpoints:
     web:
