feat: добавлена логика снятие средств со счета в микросервисе accounts

--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -15,7 +15,7 @@ server:
 
 client:
   accounts:
-    base-url: http://localhost:8081/accounts
+    base-url: http://localhost:8081/accounts/cash
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
 
