feat: доработка функционала снятия и пополнения средств на счете

--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -1,17 +1,8 @@
 spring:
   application:
-    name: template-app
-  datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-
+    name: cash
 server:
-  port: ${SERVER_PORT:8081}
+  port: ${SERVER_PORT:8083}
 
 client:
   accounts:
