feat: доработка логики transfer

--- a/exchange-generator/docker-compose.yml
+++ b/exchange-generator/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   user-service:
     build:
-      context: ./template-application
+      context: ./exchange-generator
       dockerfile: Dockerfile
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
