--- a/exchange/docker-compose.yml
+++ b/exchange/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   user-service:
     build:
-      context: ./template-application
+      context: ./exchange
       dockerfile: Dockerfile
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
