--- a/notifications/src/main/resources/application.yaml
+++ b/notifications/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: template-app
+    name: notifications
   datasource:
     url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
