--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 
 client:
   accounts:
-    base-url: http://localhost:8081/accounts/cash
+    base-url: http://localhost:8081/accounts
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
 
