--- a/transfer/src/main/resources/application.yml
+++ b/transfer/src/main/resources/application.yml
@@ -14,6 +14,10 @@ client:
     base-url: http://localhost:8084/rates
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
+  notifications:
+    base-url: http://localhost:8086/notifications
+    connect-timeout-ms: 1000
+    response-timeout-ms: 1000
 
 management:
   endpoints:
