--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -9,6 +9,14 @@ client:
     base-url: http://localhost:8081/accounts
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
+  blocker:
+    base-url: http://localhost:8082/blocker
+    connect-timeout-ms: 1000
+    response-timeout-ms: 1000
+  notifications:
+    base-url: http://localhost:8086/notifications
+    connect-timeout-ms: 1000
+    response-timeout-ms: 1000
 
 management:
   endpoints:
