--- a/exchange-generator/src/main/resources/application.yaml
+++ b/exchange-generator/src/main/resources/application.yaml
@@ -1,9 +1,14 @@
+server:
+  port: ${SERVER_PORT:8085}
+
 spring:
   application:
     name: exchange-generator
-
-server:
-  port: ${SERVER_PORT:8085}
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          issuer-uri: https://localhost:8180/realms/master
 
 management:
   endpoints:
