--- a/notifications/src/main/resources/application.yaml
+++ b/notifications/src/main/resources/application.yaml
@@ -1,9 +1,14 @@
+server:
+  port: ${SERVER_PORT:8086}
+
 spring:
   application:
     name: notifications
-
-server:
-  port: ${SERVER_PORT:8086}
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          issuer-uri: https://localhost:8180/realms/master
 
 management:
   endpoints:
