--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     oauth2:
       resource-server:
         jwt:
-          issuer-uri: https://localhost:8180/realms/master
+          issuer-uri: http://localhost:8180/realms/master
   datasource:
     url: jdbc:postgresql://localhost:5432/bank
     username: postgres
