--- a/blocker/src/main/resources/application.yaml
+++ b/blocker/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     oauth2:
       resource-server:
         jwt:
-          issuer-uri: https://localhost:8180/realms/master
+          issuer-uri: http://localhost:8180/realms/master
 
 management:
   endpoints:
