--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
             scope: profile
             clientAuthenticationMethod: client_secret_post
 
+oauth2:
+  client-registration-id: bank-practicum
+  principal: system
+
 client:
   accounts:
     base-url: http://localhost:8081/accounts
