--- a/exchange-generator/src/main/resources/application.yml
+++ b/exchange-generator/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
-  port: ${SERVER_PORT:8086}
+  port: ${SERVER_PORT:8085}
 
 spring:
   application:
-    name: notifications
+    name: exchange-generator
   security:
     oauth2:
       resource-server:
         jwt:
-          issuer-uri: https://localhost:8180/realms/master
+          issuer-uri: http://localhost:8180/realms/master
 
 management:
   endpoints:
