--- a/notifications/src/main/resources/application.yml
+++ b/notifications/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
-  port: ${SERVER_PORT:8085}
+  port: ${SERVER_PORT:8086}
 
 spring:
   application:
-    name: exchange-generator
+    name: notifications
   security:
     oauth2:
       resource-server:
         jwt:
-          issuer-uri: https://localhost:8180/realms/master
+          issuer-uri: http://localhost:8180/realms/master
 
 management:
   endpoints:
