--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: ${SERVER_PORT:8080}
+  servlet:
+    encoding:
+      enabled: true
+      charset: UTF-8
+      force: true
 
 spring:
   application:
@@ -15,7 +20,7 @@ spring:
             provider: keycloak
             authorizationGrantType: client_credentials
             client-id: bank-security
-            client-secret: t3lFCVk2q1yDCLYX2i6v6nIXEAyF507D
+            client-secret: 05NVur4UeQmcYgHaFOJgx7yny5q5EEjz
             scope: profile
             clientAuthenticationMethod: client_secret_post
 
