--- a/blocker/src/main/resources/application.yaml
+++ b/blocker/src/main/resources/application.yaml
@@ -4,6 +4,15 @@ server:
 spring:
   application:
     name: blocker
+  consul:
+    host: localhost
+    port: 8500
+    discovery:
+      service-name: blocker
+    config:
+      enabled: true
+      prefix: config
+      defaultContext: application
   security:
     oauth2:
       resource-server:
