--- a/exchange-generator/src/main/resources/application.yml
+++ b/exchange-generator/src/main/resources/application.yml
@@ -4,6 +4,15 @@ server:
 spring:
   application:
     name: exchange-generator
+  consul:
+    host: localhost
+    port: 8500
+    discovery:
+      service-name: exchange-generator
+    config:
+      enabled: true
+      prefix: config
+      defaultContext: application
   security:
     oauth2:
       resource-server:
