--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -9,6 +9,16 @@ server:
 spring:
   application:
     name: front-ui
+  cloud:
+    consul:
+      host: localhost          # Адрес Consul (по умолчанию localhost)
+      port: 8500               # Порт Consul (8500 по умолчанию)
+      discovery:
+        service-name: front-ui  # Необязательно, по умолчанию берётся spring.application.name
+      config:
+        enabled: true            # Включаем Consul Config для внешней конфигурации
+        prefix: config           # Префикс в KV-хранилище Consul (по умолчанию "config")
+        defaultContext: application  # Контекст по умолчанию
   security:
     oauth2:
       client:
@@ -30,19 +40,19 @@ oauth2:
 
 client:
   accounts:
-    base-url: http://localhost:8081/accounts
+    base-url: http://accounts/accounts
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   cash:
-    base-url: http://localhost:8083/cash
+    base-url: http://cash/cash
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   transfer:
-    base-url: http://localhost:8087/transfer
+    base-url: http://transfer/transfer
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   exchange:
-    base-url: http://localhost:8084/rates
+    base-url: http://rates/rates
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
 
