--- a/notifications/src/main/resources/application.yml
+++ b/notifications/src/main/resources/application.yml
@@ -4,6 +4,15 @@ server:
 spring:
   application:
     name: notifications
+  consul:
+    host: localhost
+    port: 8500
+    discovery:
+      service-name: notifications
+    config:
+      enabled: true
+      prefix: config
+      defaultContext: application
   security:
     oauth2:
       resource-server:
