--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -4,15 +4,14 @@ server:
 spring:
   application:
     name: cash
-  consul:
-    host: localhost
-    port: 8500
-    discovery:
-      service-name: cash
-    config:
-      enabled: true
-      prefix: config
-      defaultContext: application
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        hostname: 127.0.0.1
+      config:
+        enabled: false
   security:
     oauth2:
       client:
