--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: ${SERVER_PORT:8080}
   servlet:
     encoding:
-      enabled: true
+      enabled: false
       charset: UTF-8
       force: true
 
@@ -11,14 +11,12 @@ spring:
     name: front-ui
   cloud:
     consul:
-      host: localhost          # Адрес Consul (по умолчанию localhost)
-      port: 8500               # Порт Consul (8500 по умолчанию)
+      host: localhost
+      port: 8500
       discovery:
-        service-name: front-ui  # Необязательно, по умолчанию берётся spring.application.name
+        hostname: 127.0.0.1
       config:
-        enabled: true            # Включаем Consul Config для внешней конфигурации
-        prefix: config           # Префикс в KV-хранилище Consul (по умолчанию "config")
-        defaultContext: application  # Контекст по умолчанию
+        enabled: false
   security:
     oauth2:
       client:
@@ -30,7 +28,7 @@ spring:
             provider: keycloak
             authorizationGrantType: client_credentials
             client-id: bank-security
-            client-secret: 05NVur4UeQmcYgHaFOJgx7yny5q5EEjz
+            client-secret: t3lFCVk2q1yDCLYX2i6v6nIXEAyF507D
             scope: profile
             clientAuthenticationMethod: client_secret_post
 
@@ -56,3 +54,11 @@ client:
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
