--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -50,7 +50,7 @@ client:
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   exchange:
-    base-url: http://rates/rates
+    base-url: http://exchange/rates
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
 
