--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,6 +1,17 @@
+server:
+  port: ${SERVER_PORT:8081}
+
 spring:
   application:
-    name: org.postgresql.Driver
+    name: accounts
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        hostname: 127.0.0.1
+      config:
+        enabled: false
   datasource:
     url: jdbc:postgresql://localhost:5432/bank
     username: postgres
@@ -16,14 +27,3 @@ spring:
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
   show_sql: true
-server:
-  port: ${SERVER_PORT:8081}
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health, info
-  endpoint:
-    health:
-      show-details: always
