--- a/accounts/docker-compose.yml
+++ b/accounts/docker-compose.yml
@@ -1,24 +1,20 @@
 services:
-  user-service:
+  accounts-service:
     build:
       context: ./accounts
       dockerfile: Dockerfile
     ports:
-      - "${SERVER_PORT}:${SERVER_PORT}"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://${TEMPLATE_DB_HOST}:5432/${TEMPLATE_DB_NAME}
-      SPRING_DATASOURCE_USERNAME: ${TEMPLATE_DB_USERNAME}
-      SPRING_DATASOURCE_PASSWORD: ${TEMPLATE_DB_PASSWORD}
-      SERVER_PORT: ${SERVER_PORT}
+      - "8081:8081"
     depends_on:
-      - template-db
+      - consul
+      - bank-db
 
-  template-db:
+  bank-db:
     image: postgres:16
-    container_name: user-db
-    environment:
-      POSTGRES_DB: ${TEMPLATE_DB_NAME}
-      POSTGRES_USER: ${TEMPLATE_DB_USERNAME}
-      POSTGRES_PASSWORD: ${TEMPLATE_DB_PASSWORD}
+    container_name: bank-db
     ports:
       - "5433:5432"
+    environment:
+      POSTGRES_DB: "bank-db"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
