--- a/front-ui/docker-compose.yml
+++ b/front-ui/docker-compose.yml
@@ -1,24 +1,7 @@
 services:
-  user-service:
+  front-ui-service:
     build:
       context: ./front-ui
       dockerfile: Dockerfile
     ports:
-      - "${SERVER_PORT}:${SERVER_PORT}"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://${TEMPLATE_DB_HOST}:5432/${TEMPLATE_DB_NAME}
-      SPRING_DATASOURCE_USERNAME: ${TEMPLATE_DB_USERNAME}
-      SPRING_DATASOURCE_PASSWORD: ${TEMPLATE_DB_PASSWORD}
-      SERVER_PORT: ${SERVER_PORT}
-    depends_on:
-      - template-db
-
-  template-db:
-    image: postgres:16
-    container_name: user-db
-    environment:
-      POSTGRES_DB: ${TEMPLATE_DB_NAME}
-      POSTGRES_USER: ${TEMPLATE_DB_USERNAME}
-      POSTGRES_PASSWORD: ${TEMPLATE_DB_PASSWORD}
-    ports:
-      - "5433:5432"
+      - "8080:8080"
