--- a/transfer/src/main/resources/application.yml
+++ b/transfer/src/main/resources/application.yml
@@ -6,10 +6,8 @@ spring:
     name: transfer
   cloud:
     consul:
-      host: localhost
+      host: consul
       port: 8500
-      discovery:
-        hostname: 127.0.0.1
       config:
         enabled: false
 
