--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -11,10 +11,8 @@ spring:
     name: front-ui
   cloud:
     consul:
-      host: 127.0.0.1
+      host: consul
       port: 8500
-      discovery:
-        hostname: 127.0.0.1
       config:
         enabled: false
 
