--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,56 +33,56 @@ services:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
 
-  blocker-service:
-    build:
-      context: ./blocker
-      dockerfile: Dockerfile
-    ports:
-      - "8082:8082"
-    depends_on:
-      - consul
-
-  cash-service:
-    build:
-      context: ./cash
-      dockerfile: Dockerfile
-    ports:
-      - "8083:8083"
-    depends_on:
-      - consul
-
-  exchange-service:
-    build:
-      context: ./exchange
-      dockerfile: Dockerfile
-    ports:
-      - "8084:8084"
-    depends_on:
-      - consul
-
-  exchange-generator-service:
-    build:
-      context: ./exchange-generator
-      dockerfile: Dockerfile
-    ports:
-      - "8085:8085"
-    depends_on:
-      - consul
-
-  notifications-service:
-    build:
-      context: ./notifications
-      dockerfile: Dockerfile
-    ports:
-      - "8086:8086"
-    depends_on:
-      - consul
-
-  transfer-service:
-    build:
-      context: ./transfer
-      dockerfile: Dockerfile
-    ports:
-      - "8087:8087"
-    depends_on:
-      - consul
+#  blocker-service:
+#    build:
+#      context: ./blocker
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8082:8082"
+#    depends_on:
+#      - consul
+#
+#  cash-service:
+#    build:
+#      context: ./cash
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8083:8083"
+#    depends_on:
+#      - consul
+#
+#  exchange-service:
+#    build:
+#      context: ./exchange
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8084:8084"
+#    depends_on:
+#      - consul
+#
+#  exchange-generator-service:
+#    build:
+#      context: ./exchange-generator
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8085:8085"
+#    depends_on:
+#      - consul
+#
+#  notifications-service:
+#    build:
+#      context: ./notifications
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8086:8086"
+#    depends_on:
+#      - consul
+#
+#  transfer-service:
+#    build:
+#      context: ./transfer
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8087:8087"
+#    depends_on:
+#      - consul
