--- a/exchange-generator/src/main/resources/application.yml
+++ b/exchange-generator/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
   application:
     name: exchange-generator
+  config:
+    import: optional:consul://consul:8500
   cloud:
     consul:
       host: consul
       port: 8500
-      config:
-        enabled: false
