--- a/transfer/src/main/resources/application.yml
+++ b/transfer/src/main/resources/application.yml
@@ -4,12 +4,12 @@ server:
 spring:
   application:
     name: transfer
+  config:
+    import: optional:consul://consul:8500
   cloud:
     consul:
       host: consul
       port: 8500
-      config:
-        enabled: false
 
 client:
   accounts:
