--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -9,12 +9,30 @@ server:
 spring:
   application:
     name: front-ui
-  config:
-    import: optional:consul://consul:8500
   cloud:
     consul:
-      host: consul
+#      host: consul
+      host: 127.0.0.1
       port: 8500
+      config:
+        enabled: false
+      discovery:
+        hostname: 127.0.0.1
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8180/realms/master
+#            issuer-uri: http://keycloak:8080/realms/master
+        registration:
+          bank-practicum:
+            provider: keycloak
+            authorizationGrantType: client_credentials
+            client-id: bank-security
+            client-secret: SNxGLGmkBoXu3Ggf7UyOmOg04wT26DPN
+            scope: profile
+            clientAuthenticationMethod: client_secret_post
 
 client:
   accounts:
@@ -33,3 +51,12 @@ client:
     base-url: http://exchange/rates
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
