--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -19,6 +19,13 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
   show_sql: true
+
+client:
+  notifications:
+    base-url: http://notifications/notifications
+    connect-timeout-ms: 1000
+    response-timeout-ms: 1000
