feat: реализация генерации курсов валют по расписанию, отправка курсов в микросервис exchange. Реализация БД в микросервисе Excnhage для курсов валют. Обновление логики в связи с переходом на БД и изменения логики работы для exchange generator. Обновлен docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,17 @@ services:
       - "8084:8084"
     depends_on:
       - consul
+      - exchange-db
+
+  exchange-db:
+    image: postgres:16
+    container_name: exchange-db
+    ports:
+      - "5434:5432"
+    environment:
+      POSTGRES_DB: "exchange-db"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
 
   exchange-generator-service:
     build:
