--- a/exchange/src/main/resources/application.yml
+++ b/exchange/src/main/resources/application.yml
@@ -10,10 +10,16 @@ spring:
     consul:
       host: consul
       port: 8500
+  datasource:
+    url: jdbc:postgresql://exchange-db:5432/exchange-db
+    username: postgres
+    password: postgres
+    driverClassName: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
-client:
-  exchange-generator:
-    base-url: http://exchange-generator/exchange-generator
-    connect-timeout-ms: 1000
-    response-timeout-ms: 1000
-
+hibernate:
+  dialect: org.hibernate.dialect.PostgreSQLDialect
+  show_sql: true
