--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -25,3 +25,11 @@ client:
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info,refresh,busrefresh,busshutdown
+  endpoint:
+    health:
+      show-details: always
