--- a/exchange-generator/src/main/resources/application.yml
+++ b/exchange-generator/src/main/resources/application.yml
@@ -4,13 +4,21 @@ server:
 spring:
   application:
     name: exchange-generator
-  config:
-    import: optional:consul://consul:8500
   cloud:
     consul:
       host: consul
       port: 8500
+      config:
+        enabled: false
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info,refresh,busrefresh,busshutdown
+  endpoint:
+    health:
+      show-details: always
 client:
   exchange:
     base-url: http://exchange/rates/update
