--- a/bank-charts/values.yaml
+++ b/bank-charts/values.yaml
@@ -1,4 +1,58 @@
+global:
+  domain: bank.practicum.local
+
+# Configuration for the front-ui service subchart
 front-ui:
   replicaCount: 1
   image:
-    tag: "1.0.0"
+    repository: front-ui
+    tag: "0.0.1-SNAPSHOT"
+    pullPolicy: IfNotPresent
+    # -----------------------------
+  service:
+    type: ClusterIP
+    port: 8080
+  ingress:
+    enabled: true
+    className: "nginx"
+    hosts:
+      - host: front-ui.bank.practicum.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+
+# Configuration for the accounts service subchart
+accounts:
+  replicaCount: 1
+  image:
+    repository: accounts
+    tag: "0.0.1-SNAPSHOT"
+    pullPolicy: IfNotPresent
+    # -----------------------------
+  service:
+    type: ClusterIP
+    port: 8081
+  config:
+    # --- CORRECTED DB URL --- Using '<ReleaseName>-<Alias>' service name convention
+    database_url: "jdbc:postgresql://{{ .Release.Name }}-bank-db:5432/bank-db"
+    database_username: "postgresql"
+    # database_password_secret: "{{ .Release.Name }}-bank-db-postgresql" # Reference to secret created by DB chart
+    # database_password_secret_key: "postgresql-password" # Key within the secret
+
+
+# Configuration for the bank-db (PostgreSQL dependency)
+# Values here are prefixed according to the Bitnami PostgreSQL chart's structure
+# Check the Bitnami chart's values.yaml for all available options
+customer-db:
+  enabled: true
+  # Override values from the official postgresql chart
+  auth:
+    database: bank-db
+    username: postgresql
+    # Use existingSecret or provide password (less secure for production)
+    # existingSecret: "{{ .Release.Name }}-customer-db-postgresql" # Name of the secret to use/create
+    password: "changeM3Customer!" # Example: Not recommended for production
+  primary:
+    persistence:
+      enabled: true
+      size: 1Gi
