--- a/bank-charts/charts/front-ui/templates/serviceaccount.yaml
+++ b/bank-charts/charts/front-ui/templates/serviceaccount.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "bank-charts.serviceAccountName" . }}
+  name: {{ include "front-ui.serviceAccountName" . }}
   labels:
-    {{- include "bank-charts.labels" . | nindent 4 }}
+    {{- include "front-ui.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
-{{- end }}
+  {{- end }} 
