--- a/bank-charts/values.yaml
+++ b/bank-charts/values.yaml
@@ -43,15 +43,15 @@ accounts:
 # Configuration for the bank-db (PostgreSQL dependency)
 # Values here are prefixed according to the Bitnami PostgreSQL chart's structure
 # Check the Bitnami chart's values.yaml for all available options
-customer-db:
+bank-db:
   enabled: true
   # Override values from the official postgresql chart
   auth:
     database: bank-db
     username: postgresql
     # Use existingSecret or provide password (less secure for production)
-    # existingSecret: "{{ .Release.Name }}-customer-db-postgresql" # Name of the secret to use/create
-    password: "changeM3Customer!" # Example: Not recommended for production
+    # existingSecret: "{{ .Release.Name }}-bank-db-postgresql" # Name of the secret to use/create
+    password: "changeM3Bank" # Example: Not recommended for production
   primary:
     persistence:
       enabled: true
