feat: helm для accounts и front-ui

--- a/bank-charts/charts/accounts/values.yaml
+++ b/bank-charts/charts/accounts/values.yaml
@@ -98,3 +98,4 @@ affinity: {}
 config:
   database_url: "jdbc:postgresql://postgres-postgresql.{{ .Release.Namespace }}.svc.cluster.local:5432/bank-db"
   database_username: "postgresql"
+  notifications_url: "http://notifications/notifications"
