--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -4,16 +4,10 @@ server:
 spring:
   application:
     name: accounts
-  config:
-    import: optional:consul://consul:8500
-  cloud:
-    consul:
-      host: consul
-      port: 8500
   datasource:
-    url: jdbc:postgresql://bank-db:5432/bank-db
-    username: postgres
-    password: postgres
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driverClassName: org.postgresql.Driver
   jpa:
     hibernate:
@@ -26,6 +20,41 @@ hibernate:
 
 client:
   notifications:
-    base-url: http://notifications/notifications
+    base-url: ${CLIENT_NOTIFICATIONS_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
+
+#server:
+#  port: 8081
+#
+#spring:
+#  application:
+#    name: accounts
+#  datasource:
+#    url: jdbc:postgresql://bank-db:5432/bank-db
+#    username: postgres
+#    password: postgres
+#    driverClassName: org.postgresql.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#
+#hibernate:
+#  dialect: org.hibernate.dialect.PostgreSQLDialect
+#  show_sql: true
+#
+#client:
+#  notifications:
+#    base-url: http://notifications/notifications
+#    connect-timeout-ms: 1000
+#    response-timeout-ms: 1000
