--- a/bank-charts/charts/accounts/templates/configmap.yaml
+++ b/bank-charts/charts/accounts/templates/configmap.yaml
@@ -22,4 +22,8 @@ data:
   # SPRING_DATASOURCE_PASSWORD would typically come from a secret, not this ConfigMap.
 
   # Example: Include other config defined in values.yaml
-  # OTHER_CONFIG_PARAM: {{ .Values.config.some_other_config | quote }} 
+  # OTHER_CONFIG_PARAM: {{ .Values.config.some_other_config | quote }}
+
+  #URL notifications service
+  CLIENT_NOTIFICATIONS_URL: {{ .Values.config.notifications_url . | quote }}
+
