--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -9,27 +9,66 @@ server:
 spring:
   application:
     name: front-ui
-  config:
-    import: optional:consul://consul:8500
-  cloud:
-    consul:
-      host: consul
-      port: 8500
 
 client:
   accounts:
-    base-url: http://accounts/accounts
+    base-url: ${CLIENT_ACCOUNTS_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   cash:
-    base-url: http://cash/cash
+    base-url: ${CLIENT_CASH_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   transfer:
-    base-url: http://transfer/transfer
+    base-url: ${CLIENT_TRANSFER_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   exchange:
-    base-url: http://exchange/rates
+    base-url: ${CLIENT_EXCHANGE_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
+
+#server:
+#  port: 8080
+#  servlet:
+#    encoding:
+#      enabled: false
+#      charset: UTF-8
+#      force: true
+#
+#spring:
+#  application:
+#    name: front-ui
+#  config:
+#    import: optional:consul://consul:8500
+#  cloud:
+#    consul:
+#      host: consul
+#      port: 8500
+#
+#client:
+#  accounts:
+#    base-url: http://accounts/accounts
+#    connect-timeout-ms: 1000
+#    response-timeout-ms: 1000
+#  cash:
+#    base-url: http://cash/cash
+#    connect-timeout-ms: 1000
+#    response-timeout-ms: 1000
+#  transfer:
+#    base-url: http://transfer/transfer
+#    connect-timeout-ms: 1000
+#    response-timeout-ms: 1000
+#  exchange:
+#    base-url: http://exchange/rates
+#    connect-timeout-ms: 1000
+#    response-timeout-ms: 1000
