feat: helm для accounts и front-ui

--- a/bank-charts/charts/accounts/templates/configmap.yaml
+++ b/bank-charts/charts/accounts/templates/configmap.yaml
@@ -25,5 +25,5 @@ data:
   # OTHER_CONFIG_PARAM: {{ .Values.config.some_other_config | quote }}
 
   #URL notifications service
-  CLIENT_NOTIFICATIONS_URL: {{ .Values.config.notifications_url . | quote }}
+  CLIENT_NOTIFICATIONS_URL: {{ .Values.config.notifications_url | quote }}
 
