--- a/bank-charts/charts/front-ui/templates/configmap.yaml
+++ b/bank-charts/charts/front-ui/templates/configmap.yaml
@@ -14,10 +14,10 @@ data:
   {{- end }}
 
   #URL accounts service
-  CLIENT_ACCOUNTS_URL: {{ .Values.config.accounts_url . | quote }}
+  CLIENT_ACCOUNTS_URL: {{ .Values.config.accounts_url | quote }}
   #URL cash service
-  CLIENT_CASH_URL: {{ .Values.config.cash_url . | quote }}
+  CLIENT_CASH_URL: {{ .Values.config.cash_url | quote }}
   #URL transfer service
-  CLIENT_TRANSFER_URL: {{ .Values.config.transfer_url . | quote }}
+  CLIENT_TRANSFER_URL: {{ .Values.config.transfer_url | quote }}
   #URL exchange service
-  CLIENT_EXCHANGE_URL: {{ .Values.config.exchange_url . | quote }}
+  CLIENT_EXCHANGE_URL: {{ .Values.config.exchange_url | quote }}
