--- a/bank-charts/charts/accounts/values.yaml
+++ b/bank-charts/charts/accounts/values.yaml
@@ -96,6 +96,7 @@ affinity: {}
 
 
 config:
-  database_url: "jdbc:postgresql://postgres-postgresql.{{ .Release.Namespace }}.svc.cluster.local:5432/bank-db"
+  database_url: "jdbc:postgresql://bank-postgresql:5432/bank-db"
   database_username: "postgresql"
   notifications_url: "http://notifications/notifications"
+  dbSecretName: bank-db-secret
