feat: helm для остальных сервисов

--- a/bank-charts/charts/exchange/values.yaml
+++ b/bank-charts/charts/exchange/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: accounts
+  repository: exchange
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
@@ -18,7 +18,7 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-# This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
+# This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-exchange/
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
@@ -53,7 +53,7 @@ service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  port: 8081
+  port: 8084
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
@@ -61,7 +61,7 @@ ingress:
   className: "nginx"
   annotations: {}
   hosts:
-    - host: accounts.bank.practicum.local # значение по умолчанию, переопределяется при деплое в prod
+    - host: exchange.bank.practicum.local # значение по умолчанию, переопределяется при деплое в prod
       paths:
         - path: /
           pathType: Prefix
@@ -94,6 +94,5 @@ tolerations: []
 affinity: {}
 
 config:
-  database_url: "jdbc:postgresql://{{ .Release.Name }}-bank-db:5432/bank-db"
+  database_url: "jdbc:postgresql://{{ .Release.Name }}-exchange-db:5432/exchange-db"
   database_username: "postgresql"
-  notifications_url: "http://notifications/notifications"
