--- a/bank-charts/charts/cash/values.yaml
+++ b/bank-charts/charts/cash/values.yaml
@@ -1,3 +1,4 @@
+# Default values for bank-charts.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -6,7 +7,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: accounts
+  repository: cash
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
@@ -38,7 +39,7 @@ podAnnotations: {}
 podLabels: {}
 
 podSecurityContext: {}
-# fsGroup: 2000
+  # fsGroup: 2000
 
 securityContext: {}
   # capabilities:
@@ -46,14 +47,14 @@ securityContext: {}
   #   - ALL
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
-# runAsUser: 1000
+  # runAsUser: 1000
 
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  port: 8081
+  port: 8083
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
@@ -61,7 +62,7 @@ ingress:
   className: "nginx"
   annotations: {}
   hosts:
-    - host: accounts.bank.practicum.local # значение по умолчанию, переопределяется при деплое в prod
+    - host: cash.bank.practicum.local # значение по умолчанию, переопределяется при деплое в prod
       paths:
         - path: /
           pathType: Prefix
@@ -77,7 +78,7 @@ resources: {}
   #   memory: 128Mi
   # requests:
   #   cpu: 100m
-#   memory: 128Mi
+  #   memory: 128Mi
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
@@ -94,6 +95,6 @@ tolerations: []
 affinity: {}
 
 config:
-  database_url: "jdbc:postgresql://{{ .Release.Name }}-bank-db:5432/bank-db"
-  database_username: "postgresql"
+  accounts_url: "http://accounts/accounts"
+  blocker_url: "http://blocker/blocker"
   notifications_url: "http://notifications/notifications"
