--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -7,15 +7,15 @@ spring:
 
 client:
   accounts:
-    base-url: http://accounts/accounts
+    base-url: ${CLIENT_ACCOUNTS_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   blocker:
-    base-url: http://blocker/blocker
+    base-url: ${CLIENT_BLOCKER_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   notifications:
-    base-url: http://notifications/notifications
+    base-url: ${CLIENT_NOTIFICATIONS_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
 
