--- a/transfer/src/main/resources/application.yml
+++ b/transfer/src/main/resources/application.yml
@@ -7,19 +7,19 @@ spring:
 
 client:
   accounts:
-    base-url: http://accounts/accounts
+    base-url: ${CLIENT_ACCOUNTS_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   blocker:
-    base-url: http://blocker/blocker
-    connect-timeout-ms: 1000
-    response-timeout-ms: 1000
-  exchange:
-    base-url: http://exchange/rates
+    base-url: ${CLIENT_BLOCKER_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   notifications:
-    base-url: http://notifications/notifications
+    base-url: ${CLIENT_NOTIFICATIONS_URL}
+    connect-timeout-ms: 1000
+    response-timeout-ms: 1000
+  exchange:
+    base-url: ${CLIENT_EXCHANGE_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
 
