feat: helm для остальных сервисов

--- a/bank-charts/charts/accounts/templates/deployment.yaml
+++ b/bank-charts/charts/accounts/templates/deployment.yaml
@@ -54,6 +54,12 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "accounts.fullname" . }}
+          env:
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-bank-db
+                  key: password
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
